--- a/SnakeMess/SnakeMess.csproj
+++ b/SnakeMess/SnakeMess.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Apple.cs" />
+    <Compile Include="Point.cs" />
+    <Compile Include="Snake.cs" />
     <Compile Include="SnakeMess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
