--- a/SnakeMess/SnakeMess.csproj
+++ b/SnakeMess/SnakeMess.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Apple.cs" />
+    <Compile Include="Controller.cs" />
+    <Compile Include="GameObject.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="Snake.cs" />
     <Compile Include="SnakeMess.cs" />
